maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:30: error: '<-' expected but ')' found.
  for(i to 10){
             ^WallFollowerMaze:36: error: illegal start of simple expression
} 
^