maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  keepHandOnSideWall()
  
}


// On suit le mur de gauche
def keepHandOnSideWall():Unit = {
  
  while(!estSurBiscuit())
  {
   // On v?rifie s'il y a un mur ? gauche
    gauche();
    if(estFaceMur())
    {
      droite();
      while(estFaceMur())
      {
        droite();
      }
      avance();
    }
    else
    {
      avance();
    }
  }
  
  val i = 2;
  for(i to 10){
    println("test"),
  }
  prendBiscuit();
  
  
}